# jaxutil

./: .gitignore  LICENSE  pyproject.toml  setup.py  test.ipynb
jaxbase/: lax_util.py  linalg.py  losses.py  poly.py  train.py  tree_util.py  util.py
jaxbase/data/: cifar10.py  cifar100.py  mnist.py
jaxbase/data/tfds/: cifar10.py
jaxbase/data/torch/: __init__.py  cifar10.py  cifar100.py  mnist.py  util.py
jaxbase/hessian/: spectral_util.py  vector_products.py
jaxbase/models/: resnet.py
jaxbase/tests/: lax_util_tests.py
jaxutil/: __init__.py  auto.py  derivatives.py  flags.py  lax.py  lax_util.py  linalg.py  nnx.py  notebook.ipynb  poly.py  setup.py  types.py  util.py
jaxutil/data/: cifar.py  cifar100.py
jaxutil/models/: MLP.py  util.py
jaxutil/muP/: layers.py  models.py
jaxutil/tests/: lax_tests.py
jaxutil/~/.matplotlib/: fontlist-v330.json
src/: jax_flags.py
src/jaxutil/: __init__.py  auto.py  derivatives.py  eigen.py  lax_util.py  nnx.py
