[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxutil"
version = "0.6.0"
description = "JAX utility package"
authors = [{ name = "Alex Damian", email = "adamiab@mit.edu" }]
license = { text = "MIT" }

dependencies = ["jax", "numpy", "tqdm"]

[project.optional-dependencies]
data = ["datasets"]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["jax_flags"]

[tool.setuptools.packages.find]
where = ["src"]
